apps/traefik/base/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: traefik
  selector:
    app: traefik
