apps/traefik/base/dashboard-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
  - kind: Rule
    match: Host(`dev-nerdd.univie.ac.at`) && PathPrefix(`/traefik`)
    services:
    - name: api@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth
spec:
  basicAuth:
    secret: secretName # Kubernetes secret named "secretName"
