apps/traefik/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  routes:
    - kind: Rule
      match: PathPrefix(`/traefik/api`) || PathPrefix(`/traefik/dashboard`)
      services:
        - name: api@internal
          kind: TraefikService
